Revert formatting changes - keep only Spotless plugin setup
Co-authored-by: TheStackTraceWhisperer <4791708+TheStackTraceWhisperer@users.noreply.github.com>